# datasetFactory

./: .env.example  .gitattributes  .gitignore  CONFIGURATION.md  MANIFEST.in  README.md  d.json  generation_config.yaml  pyproject.toml  response.json
datasets/: README.md
datasets/goldrush_1k/: README.md  config.json  documents.jsonl  metadata.json  queries.json  statistics.json  world_context.txt
datasets/goldrush_1k/costs/: cost_batches.jsonl  cost_summary.json
datasets/goldrush_35k/: README.md  config.json  documents.jsonl  head_10.jsonl  metadata.json  queries.json  statistics.json  world_context.txt
datasets/goldrush_35k/costs/: cost_batches.jsonl  cost_summary.json
datasets/nexacorp_85k/: 100.jsonl  README.md  config.json  documents.jsonl  world_context.txt
datasets/nexacorp_85k/costs/: cost_batches.jsonl  cost_summary.json
datasets/pharma_5k/: README.md  config.json  documents.jsonl  metadata.json  queries.json  world_context.txt
datasets/pharma_5k/costs/: cost_batches.jsonl  cost_summary.json
docs/: index.html
examples/financial_firm_example/: config.json  documents.jsonl  metadata.json  queries.json  statistics.json  world_context.txt
examples/financial_firm_example/costs/: cost_batches.jsonl  cost_summary.json
examples/goldrush_example/: config.json  documents.jsonl  metadata.json  queries.json  statistics.json  world_context.txt
examples/goldrush_example/costs/: cost_batches.jsonl  cost_summary.json
examples/spy_agency_example/: config.json  documents.jsonl  metadata.json  queries.json  statistics.json  world_context.txt
examples/spy_agency_example/costs/: cost_batches.jsonl  cost_summary.json
src/dataset_factory/: __init__.py  analysis.py  cost_tracker.py  generator.py  llm.py
src/dataset_factory/cli/: main.py
src/dataset_factory/config/: __init__.py  expander.py  generation_config.py  generator_multistep.py  models.py  models_simple.py  validator.py
src/dataset_factory/generation/: __init__.py  direct_generator.py  query_generator.py  world_builder.py
src/dataset_factory/rendering/: __init__.py  pdf_renderer.py
src/dataset_factory/storage/: __init__.py  dataset.py  utils.py
